--- a/.github/workflows/dockerhub-build-push-on-release.yml
+++ b/.github/workflows/dockerhub-build-push-on-release.yml
@@ -43,8 +43,8 @@ jobs:
             BUILD_DATE=${{ github.event.repository.updated_at }}
             VERSION=${{ github.event.release.tag_name }}
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/calibre-web-automated:${{ github.event.release.tag_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/calibre-web-automated:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/calibre-web-automated-doq:${{ github.event.release.tag_name }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/calibre-web-automated-doq:latest
             ghcr.io/${{ github.repository_owner }}/${{ env.LOWER_REPO_NAME }}:${{ github.event.release.tag_name }}
             ghcr.io/${{ github.repository_owner }}/${{ env.LOWER_REPO_NAME }}:latest
           platforms: linux/amd64,linux/arm64
